syntax = "proto3";

package metrics_proto;

option go_package = "go-metrics-service/proto";

service MetricsService {
  rpc UpdateMetrics (UpdateMetricsRequest) returns (UpdateMetricsResponse);
}

message Metrics {
  string id = 1;
  string type = 2;
  int64 delta = 3;
  double value = 4;
}

message UpdateMetricsRequest {
  repeated Metrics metrics = 1;
}

message UpdateMetricsResponse {
  bool success = 1;
  string error = 2;
}
